# UB010.0.0_demo

./: CMakeLists.txt  prj.conf
boards/: nrf52840dk_nrf52840.overlay
inc/: button_part.h  led_part.h  uart_part.h  usb_part.h
src/: button_part.c  led_part.c  main.c  uart_part.c  usb_part.c
